<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/game_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <FrameLayout
            android:id="@+id/craft_space"
            android:layout_width="match_parent"
            android:layout_height="349dp">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/known_elements"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/baloo"
                    android:text="TextView"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="270dp">

                <TableLayout
                    android:id="@+id/elements_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2,3" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_craft_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/reset_craft_button" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/reset_button"
                tools:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
